TODO: Z-Lift-Bug seems to be still present! Avoid Z-Lift.
TODO: Test Z-Homing and Pause-Pause-Continue in Milling-Mode
TODO: Test driving free without FEATURE drive-free in Milling-Mode @RF1000/RF2000
TODO: Testing, testing ..

V RF.01.37u2.Mod (2017-09-10)
- finally tested PAUSE with MOVE while Milling and it did not work as expected. Small bug which is now patched.

V RF.01.37u.Mod (2017-09-05)
- Changed STEP_DOUBLER_FREQUENCY to standard 6500 because of performance reasons
- Added Menu-Support and EEPROM-Support to change STEP_DOUBLER_FREQUENCY onthefly.
   These changes are awsome!! My Printer runs way better now, when going to 50..80mm/s. It has more calculating power leftover to care for fluent bufferuse.
- minor tweaks.
- resort stepper drivers config in order to build them in dynamically some day from now.

V RF.01.37t6.Mod (2017-09-04)
- call for possible twoway communication with host software
    Com::printFLN( PSTR("RequestPause:") ); //repetier
    Com::printFLN( PSTR( "// action:pause" ) ); //octoprint
    Com::printFLN( PSTR("RequestContinue:") );  //repetier
    Com::printFLN( PSTR( "// action:resume" ) ); //octoprint
    Com::printFLN( PSTR("RequestStop:") );  //repetier
    Com::printFLN( PSTR( "// action:disconnect" ) ); //octoprint
      if paused or continued or stop print
(still missing commands for S3D machine control and other software!)
- more sync on messages when starting pause from GCode vs. Button
- more distinct menu filter for SD-Print vs. Host-Print.
- M3070 without S1|S2 now goes to "simple pause without move"

V RF.01.37t5.Mod (2017-09-03)
- Millingmode: Show X19 / 230V status instead of nothing in temperatures row at menu 0
- Fixed Menu count within configuration -> z-configuration
- fixed MENU_MODE_PRINTING which is recognized now when printing
- Menu is restricted to specific actions if MENU_MODE_PRINTING while printing. (rightnow not yet when heating and homing)
- Milling-Mode: Mod-Menu is not shown anymore