@@ -4,7 +4,9 @@ TODO: Test driving free without FEATURE drive-free in Milling-Mode @RF1000/RF200
 TODO: Testing, testing ..
 
 V RF.01.37u2.Mod (2017-09-10)
-- finally tested PAUSE with MOVE while Milling and it did not work as expected. Small bug which is now patched.
+- Milling: finally tested PAUSE with MOVE while Milling and it did not work as expected. Small bug which is now patched.
+- Milling: moved "Set XY Origin" to Menu "Position->" for manual positioning.
+- Milling: fix possible homing one axis allowes "set xy origin" which needs at least 2 or 3 axes.
 
 V RF.01.37u.Mod (2017-09-05)
 - Changed STEP_DOUBLER_FREQUENCY to standard 6500 because of performance reasons
